Refactor error handling & add advanced OTP rate limiting
- Refactored Error model to include ErrorType and validation details; improved error factory methods and error handling pipeline for structured, user-friendly API errors.
- Switched to sliding window rate limiting; added per-policy and per-phone OTP rate limits with custom partitioning and improved client identification.
- Enhanced SendOtpValidator for stricter mobile number validation and security.
- Updated OTP API integration to use POST with JSON body.
- Adjusted middleware order and endpoint error responses for correct rate limiting and error reporting.
- Updated RateLimit.config.json with new OTP policies.

--- a/src/UnifiedOnboading/UnifiedOnboarding.Registration.Bff/ConfigFiles/RateLimit.config.json
+++ b/src/UnifiedOnboading/UnifiedOnboarding.Registration.Bff/ConfigFiles/RateLimit.config.json
@@ -18,6 +18,18 @@
       "Anonymous": {
         "PermitLimit": 5,
         "Window": "1m"
+      },
+      "OtpSend": {
+        "PermitLimit": 3,
+        "Window": "15m"
+      },
+      "OtpVerify": {
+        "PermitLimit": 5,
+        "Window": "5m"
+      },
+      "OtpPerPhone": {
+        "PermitLimit": 5,
+        "Window": "1h"
       }
     }
   }
